--- a/2_14fi_aknakereso_wpf/MainWindow.xaml
+++ b/2_14fi_aknakereso_wpf/MainWindow.xaml
@@ -13,6 +13,8 @@
             <Setter Property="BorderThickness" Value="1"/>
             <Setter Property="BorderBrush" Value="Gray"/>
             <Setter Property="Margin" Value="1"/>
+            <Setter Property="FontSize" Value="30"/>
+            <Setter Property="FontWeight" Value="Bold"/>
         </Style>
     </Window.Resources>
     <Grid Name="sajt">
